# twt-app

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  vcpkg.json
src/: Application.cpp  Application.h  MainWindow.cs  MainWindow.glade  PopupFrame.cpp  PopupFrame.h  Program.cs  TaskBarIcon.cpp  TaskBarIcon.h  TimeEntry.cpp  TimeEntry.h  TimeService.cpp  TimeService.h  main.cpp
src/assets/: style.css
